tests/baselines/reference/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.errors.txt
==== tests/cases/compiler/ClassAndModuleThatMergeWithModulesExportedGenericFunctionAndNonGenericClassStaticFunctionOfTheSameName.ts (3 errors) ====
    class clodule<T> {
        id: string;
        value: T;
    
        static fn(id: string) { }
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2149: Overload signature is not compatible with function definition:
!!! 	Call signature expects 1 or fewer parameters.
        ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2151: Overload signatures must all be exported or not exported.
    }
    
    module clodule {
        // error: duplicate identifier expected
        export function fn<T>(x: T, y: T): T {
                        ~~
!!! error TS2000: Duplicate identifier 'fn'.
            return x;
        }
    }
    
    